# my_cents_manager

./: .gitignore  Dockerfile  README.md  default.nix  docker-compose.nginx.yml  docker-compose.yml  pyproject.toml  start-app.sh
.github/workflows/: deploy.yml  test.yml
authentication/: forms.py  urls.py  views.py
authentication/templates/: base.html  home.html  signin.html  signup.html
authentication/tests/: test_forms.py  test_views.py
core/: settings.py  urls.py
finances/: forms.py  middleware.py  mixins.py  models.py  tests.py  urls.py  validators.py  views.py
finances/fixtures/: expense.json  expenses.json  users.json
finances/migrations/: 0001_initial.py  0002_income.py  0003_transaction.py  0004_expense_transaction_income_transaction.py  0005_alter_expense_transaction_alter_income_transaction.py  0005_expense_invoice_file.py  0005_expense_invoice_file_expense_receipt_file.py
finances/templates/: _month_navigation.html  _overview_card.html  _transactions_table.html  base.html  home.html  index.html  login.html  monthly_view.html
finances/templates/expense/: __table_due.html  _form.html  confirm_delete.html  detail.html  form.html  index.html  monthly.html  new.html  update.html
finances/templates/income/: confirm_delete.html  form.html  index.html  new.html  update.html
finances/templates/main/: navbar.html
finances/templatetags/: bootstrapfilter.py  moneyfilter.py
finances/tests/: mixins.py  test_models.py  test_views.py
infrastructure/caddy/: Caddyfile
infrastructure/nginx/conf.d/: nginx.conf
