[tool.poetry]
name = "finance-app"
version = "0.1.0"
description = "a simple app to manage personal finance"
authors = ["Domingos Dias"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
taskipy = "^1.12.2"
isort = "^5.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
mkdocs-macros-plugin = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
extend-exclude = '(migrations/)'

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.taskipy.tasks]
lint = "blue --check  --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint" 
test = "poetry run python manage.py test finances" 
#post_test = "coverage html"