[tool.poetry]
name = "finance-app"
version = "0.1.0"
description = "a simple app to manage personal finance"
authors = ["Domingos Dias"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
ruff = "^0.1.8"
gunicorn = "^21.2.0"
mysqlclient = "^2.2.1"
django-storages = "^1.14.2"
boto3 = "^1.34.19"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
taskipy = "^1.12.2"
isort = "^5.13.0"
coverage = "^7.3.2"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
mkdocs-macros-plugin = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.blue]
extend-exclude = '(migrations/)'

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
docs = "mkdocs serve"
pre_test = "task lint" 
test = "poetry run coverage run --source='.' manage.py test finances authentication" 
post_test = "poetry run coverage html"
run = "python manage.py runserver"

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "manage.py",
    "core/*",
    "finances/__init__.py",
    "finances/migrations/*",
    "finances/tests/*",
]